# xiaohongshu-auto-publish

./: .env.example  .gitignore  AGENTS.md  README.md  config.toml  main.py  pyproject.toml
accounts/: default.toml
doc/: detailed_design.md  high_level_design.md  implementation_decisions.md  prompt.md  proposal.md  recovery.md  repair_log.md  workspace_detail.md
doc/tasks/: account-profile.md  artifact-store.md  asset-library.md  config-management.md  content-review.md  format-review.md  format-rules.md  input-normalizer.md  interaction-adapter.md  llm-gateway.md  media-manifest.md  package-builder.md  progress.md  publisher.md  research-service.md  search-provider.md  source-policy.md  state-store.md  workflow-orchestrator.md  workspace-maintenance.md  writing-review.md
rules/: source_policy.toml  xhs_format_rules.toml
src/xiaohongshu_auto_publish/: __init__.py  app.py  cli.py  errors.py  models.py  post_fields.py
tests/: conftest.py  factories.py
tests/integration/: test_article_workflow_with_fakes.py  test_topic_workflow_with_fakes.py
tests/unit/: test_account_profile.py  test_artifact_store.py  test_asset_library.py  test_cli.py  test_config_loader.py  test_content_review.py  test_format_review.py  test_format_rules.py  test_input_normalizer.py  test_llm_gateway.py  test_media_manifest.py  test_orchestrator.py  test_package_builder.py  test_post_fields.py  test_publish_manual.py  test_research_service.py  test_review_output_parser.py  test_search_provider.py  test_source_policy.py  test_state_store.py  test_states.py  test_workspace_maintenance.py  (+1 more)
(+48 files in other folders)
