[project]
name = "xiaohongshu-auto-publish"
version = "0.1.0"
description = "Local CLI agent for Xiaohongshu medical and wellness content workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filelock>=3.15,<4",
    "openai>=1.40,<1.50",
    "pyyaml>=6.0.2,<7",
    "tavily-python>=0.5,<0.6",
    "typer>=0.20,<0.21",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[project.scripts]
xhs-agent = "xiaohongshu_auto_publish.cli:main"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ARG"]
